Add OGP image and social meta tags

--- a/index.html
+++ b/index.html
@@ -3,11 +3,25 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Google AI Studio App</title>
+    <title>ShortcutMaster</title>
+    <meta name="description" content="ShortcutMaster - Automate Your Workflow" />
+
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="ShortcutMaster" />
+    <meta property="og:description" content="ShortcutMaster - Automate Your Workflow" />
+    <meta property="og:url" content="https://s-meiki.github.io/shortcutmaster/" />
+    <meta property="og:image" content="https://s-meiki.github.io/shortcutmaster/ogp.png" />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image:width" content="1536" />
+    <meta property="og:image:height" content="1024" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="ShortcutMaster" />
+    <meta name="twitter:description" content="ShortcutMaster - Automate Your Workflow" />
+    <meta name="twitter:image" content="https://s-meiki.github.io/shortcutmaster/ogp.png" />
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
-
